putting up some crappy css. :D

--- a/html/playgame.html
+++ b/html/playgame.html
@@ -1,24 +1,27 @@
-<head>
-  <script src="playgame.js"></script>
-</head>
-<body>
-  <div id="all">
-    <div id="header">
-	<span>Question ##</span>
-    </div>
-    <div id="body">
-      <div id="question">
-	  <span>I am a question</span>
+<html>
+  <head>
+    <script src="playgame.js"></script>
+    <link rel="stylesheet" type="text/css" href="trivia-battle.css" />
+    <title>QuizBattle!</title>
+  </head>
+  <body>
+    <div id="all">
+      <div id="header">
+      <span>Question</span> 
+      <span id="questionNumber">##</span></div>
+      <div id="content">
+        <div id="question">
+          <span>I am a question</span>
+        </div>
+        <div id="answer">
+        <button id="a1">Answer #1</button> 
+        <button id="a1">Answer #2</button> 
+        <button id="a1">Answer #3</button> 
+        <button id="a1">Answer #4</button></div>
       </div>
-      <div id="answer">
-	  <button id="a1">Answer #1</button>
-	  <button id="a1">Answer #2</button>
-	  <button id="a1">Answer #3</button>
-	  <button id="a1">Answer #4</button>
+      <div id="footer">
+        <span>I&#39;m the footer</span>
       </div>
     </div>
-    <div id="footer">
-		<span>I'm the footer</span>
-    </div>
-  </div>
-</body>
+  </body>
+</html>
