--- a/html/topics.html
+++ b/html/topics.html
@@ -1,20 +1,28 @@
-<head>
-  <script src="topics.js"></script>
-</head>
-<body>
-  <div id="all">
-    <div id="header">
-      Welcome! Select a topic.
+<html>
+  <head>
+    <script src="topics.js"></script>
+    <link rel="stylesheet" type="text/css" href="trivia-battle.css" />
+    <title>Select a topic</title>
+  </head>
+  <body>
+    <div id="all">
+      <div id="header">Welcome! Select a topic.</div>
+      <div id="content">
+        <ul id="topics">
+          <li>
+            <a href="#">Topic 1</a>
+          </li>
+          <li>
+            <a href="#">Topic 2</a>
+          </li>
+          <li>
+            <a href="#">Topic 3</a>
+          </li>
+        </ul>
+      </div>
+      <div id="footer">
+        <span>Footer Section</span>
+      </div>
     </div>
-    <div id="body">
-      <ul>
-        <li>Topic 1</li>
-        <li>Topic 2</li>
-        <li>Topic 3</li>
-     </ul>
-    </div>
-    <div id="footer">
-      Footer Section
-    </div>
-  </div>
-</body>
+  </body>
+</html>
